upd: metodo store actualizado
